Milkshake menu container added

--- a/milkShop.html
+++ b/milkShop.html
@@ -65,10 +65,71 @@
             </div>
             <div class="addition mx-auto position-relative">
                 <span class="add position-absolute">ADD</span>
-                <span>REGULAR CONE   $1.25</span>
-                <span>FLAVORED WAFFLE CONE   $2.00</span>
-                <span>DONUT   $2.00</span>
-                <span>TOPPING OR DRIZZLE   $0.50</span>
+                <span>REGULAR CONE $1.25</span>
+                <span>FLAVORED WAFFLE CONE $2.00</span>
+                <span>DONUT $2.00</span>
+                <span>TOPPING OR DRIZZLE $0.50</span>
+            </div>
+        </div>
+        <div class="milkshake d-flex">
+            <div class="imgslogan mr-5">
+            </div>
+            <div class="milk-menu">
+                <div class="normal h-50 pt-5">
+                    <h2 class="mb-3 pt-4">MILK MONSTER</h2>
+                    <h6>Hot donut with ice cream inside</h6>
+                    <hr>
+                    <div class="d-flex mt-5 mb-4">
+                        <div class="choose">
+                            <h5>1) PICK ICE CREAM</h5>
+                            <h5>2) CHOOSE 1 TOPPING</h5>
+                        </div>
+                        <div class="choose">
+                            <h5>$6.00</h5>
+                        </div>
+                    </div>
+                    <div class="toppers d-flex px-4 position-relative">
+                        <h5 class="add position-absolute p-1">ADD</h5>
+                        <h6>TOPPING OR DRIZZLE</h6>
+                        <h6>$0.50</h6>
+                    </div>
+                </div>
+
+                <div class="special h-50">
+                    <h3 class="font-weight-bold">SPECIAL</h3>
+                    <div class="d-flex">
+                        <h2 class="font-weight-bold">MILK MONSTER</h2>
+                        <h2>$9</h2>
+                    </div>
+                    <hr>
+                    <div class="options d-flex mt-4">
+                        <div class="option">
+                            <h5>FRITTER MONSTER</h5>
+                            <h6>You choose ice cream</h6>
+                        </div>
+                        <div class="option">
+                            <h5>BLUEBERRY MONSTER</h5>
+                            <h6>Blueberry jam, vanilla ice cream</h6>
+                        </div>
+                        <div class="option">
+                            <h5>NUTTY MONSTER</h5>
+                            <h6>Nutella, banana, vanilla ice cream</h6>
+                        </div>
+                        <div class="option">
+                            <h5>S'MORES MONSTER</h5>
+                            <h6>Marshmallow, chocolate, vanilla ice cream</h6>
+                        </div>
+                        <div class="option">
+                            <h5>SHORTCAKE MONSTER</h5>
+                            <h6>Strawberry, icing, vanilla ice cream</h6>
+                        </div>
+                        <div class="option">
+                            <h5>PBJ MONSTER</h5>
+                            <h6>PBJ, vanilla ice cream</h6>
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </main>
