An actual drinks container added

--- a/milkShop.html
+++ b/milkShop.html
@@ -128,10 +128,118 @@
                             <h6>PBJ, vanilla ice cream</h6>
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
+        <div class="treatsndrinks">
+            <div class="drinkmenu">
+                <div class="milkyones d-flex mt-5">
+                    <div class="treats">
+                        <h2 class="font-weight-bold">TREATS</h2>
+                        <hr>
+                        <div class="element d-flex">
+                            <h5>MILKSHAKES</h5>
+                            <h5>$7.50</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>CEREAL MILK SHAKES</h5>
+                            <h5>$9.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>PINT ICE CREAM</h5>
+                            <h5>$9.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>GOURMET DONUTS</h5>
+                            <h5>$4.50</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>DONUT</h5>
+                            <h5>$2.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>MACARONS</h5>
+                            <h5>$4.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>MACARONS</h5>
+                            <h5>$20.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>MACARONS</h5>
+                            <h5>$32.00</h5>
+                        </div>
+                    </div>
+                    <div class="bottleddrinks">
+                        <h2 class="font-weight-bold">
+                            BOOTLED DRINKS
+                        </h2>
+                        <hr>
+                        <div class="element d-flex">
+                            <h5>STUMPTOWN</h5>
+                            <h5>$4.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>BOTTLED SODAS</h5>
+                            <h5>$2.50</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>BLK WATER</h5>
+                            <h5>$4.00</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>BOXES WATER</h5>
+                            <h5>$2.50</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>RED BULL</h5>
+                            <h5>$3.75</h5>
+                        </div>
+                        <div class="element d-flex">
+                            <h5>COCONUT WATER</h5>
+                            <h5>$3.00</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="colddrinks mt-5 pt-5">
+                    <div class="element d-flex">
+                        <h2 class="font-weight-bold">DRINKS</h2>
+                        <h5>16 oz | &nbsp;24 oz</h5>
+                    </div>
+                    <hr>
+                    <div class="element d-flex">
+                        <h5>HOT CHOCOLATE</h5>
+                        <h5>$4.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>CHOCOLATE MILK</h5>
+                        <h5>$4.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>CHARCOAL LEMONADE</h5>
+                        <h5>$5.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>UNICORN LEMONADE</h5>
+                        <h5>$5.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>STRAWBERRY LIMEADE</h5>
+                        <h5>$5.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>BLUEBERRY LIMEADE</h5>
+                        <h5>$5.00 | $6.00</h5>
+                    </div>
+                    <div class="element d-flex">
+                        <h5>COLD FUSION ENERGY DRINK</h5>
+                        <h5>$5.00 | $6.00</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="drinkimg"></div>
+        </div>
+
     </main>
 </body>
 
